<resources>
    <string name="app_name">Samhaus</string>

    <string name="msg_exit_tow_click_app">再按一次退出应用</string>

    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="magenta">Magenta</string>
    <string name="maroon">Maroon</string>
    <string name="navy">Navy</string>


    <string name="simple_circle_button_example">Simple Circle Button Example</string>
    <string name="button_place_alignment_example">Button Place Alignment Example</string>
    <string name="text_inside_circle_button_example">Text Inside Circle Button Example</string>
    <string name="text_outside_circle_button_example">Text Outside Circle Button Example</string>
    <string name="ham_button_example">Ham Button Example</string>
    <string name="boom_example">Boom Example</string>
    <string name="order_example">Order Example</string>
    <string name="actionbar_example">ActionBar Example</string>
    <string name="ease_example">Ease Example</string>
    <string name="listener_example">Listener Example</string>
    <string name="control_example">Control Example</string>
    <string name="share_example">Share Example</string>
    <string name="list_example">List Example</string>
    <string name="recycler_view_example">Recycler View Example</string>
    <string name="fragment_example">Fragment Example</string>

    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside Circle Button(Highlighted)</string>
    <string name="text_inside_circle_button_text_unable">Text Inside Circle Button(Unable)</string>

    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>

    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>
    <string name="title_activity_add_data">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码(optional)</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱已注册</string>
    <string name="error_invalid_password">密码太短换一个吧</string>
    <string name="error_incorrect_password">密码好像不对哦</string>
    <string name="error_field_required">必填项哦d</string>
    <string name="permission_rationale">"请提供电子邮件以获取联系人权限"
    </string>

    <string name="VideoView_error_text_invalid_progressive_playback">无效的连续播放</string>
    <string name="VideoView_error_text_unknown">未知错误</string>
    <string name="VideoView_error_button">OK</string>

    <string name="task_img_storage_err">无法保存照片，请检查SD卡是否挂载</string>
</resources>
