<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/simple_circle_button_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simple_circle_button_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/text_inside_circle_button_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_inside_circle_button_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/text_outside_circle_button_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_outside_circle_button_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/ham_button_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ham_button_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/boom_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boom_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_place_alignment_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_place_alignment_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/order_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/actionbar_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionbar_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/ease_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ease_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/listener_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listener_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/control_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/control_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/share_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/list_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/recycler_view_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recycler_view_example"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/fragment_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_example"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
